--- a/PCA.ipynb
+++ b/PCA.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 82,
+   "id": "instrumental-cooperation",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import packages\n",
+    "# Import necessary packages\n",
     "import pandas as pd \n",
     "import numpy as np \n",
     "from sklearn.model_selection import train_test_split\n",
@@ -14,12 +15,15 @@
     "from sklearn.metrics import accuracy_score\n",
     "from sklearn.metrics import confusion_matrix\n",
     "from sklearn.metrics import f1_score\n",
-    "from parse import preprocess"
+    "from parse import preprocess\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.decomposition import PCA"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 83,
+   "id": "outside-chassis",
    "metadata": {},
    "outputs": [
     {
@@ -68,22 +72,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Initialise counters for each condition\n",
-    "frail = 0\n",
-    "frail_mci = 0\n",
-    "mci = 0\n",
-    "prefrail_mci = 0\n",
-    "prefrail = 0\n",
-    "robust = 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 84,
+   "id": "removable-happiness",
    "metadata": {},
    "outputs": [
     {
@@ -103,6 +93,14 @@
     }
    ],
    "source": [
+    "# Initialise counters for each condition\n",
+    "frail = 0\n",
+    "frail_mci = 0\n",
+    "mci = 0\n",
+    "prefrail_mci = 0\n",
+    "prefrail = 0\n",
+    "robust = 0\n",
+    "\n",
     "# Count rows of data for each condition\n",
     "for i in range(0, len(df)):\n",
     "\tif df.at[i, 'condition'] == 'frail':\n",
@@ -131,7 +129,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 85,
+   "id": "mechanical-boundary",
    "metadata": {},
    "outputs": [
     {
@@ -183,27 +182,6 @@
       "Shape of Labels:\n",
       "(1007,)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0        frail\n",
-       "1        frail\n",
-       "2        frail\n",
-       "3        frail\n",
-       "4        frail\n",
-       "         ...  \n",
-       "1002    robust\n",
-       "1003    robust\n",
-       "1004    robust\n",
-       "1005    robust\n",
-       "1006    robust\n",
-       "Name: condition, Length: 1007, dtype: object"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -218,60 +196,118 @@
     "print(\"\\nShape of Features:\")\n",
     "print(x.shape)\n",
     "print(\"\\nShape of Labels:\")\n",
-    "print(y.shape)"
+    "print(y.shape)\n",
+    "\n",
+    "# Standardizing the features\n",
+    "x = StandardScaler().fit_transform(x)\n",
+    "\n",
+    "y = np.array(y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 86,
+   "id": "analyzed-sterling",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pca = PCA(n_components=2)\n",
+    "principalComponents = pca.fit_transform(x)\n",
+    "\n",
+    "principalDf = pd.DataFrame(data = principalComponents\n",
+    "             , columns = ['principal component 1', 'principal component 2'])\n",
+    "\n",
+    "finalDf = pd.concat([principalDf, df[['condition']]], axis = 1)\n",
+    "\n",
+    "y = finalDf['condition']\n",
+    "x = finalDf.drop(['condition'], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "textile-american",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'y' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-018747a5c02b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     17\u001b[0m }\n\u001b[0;32m     18\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 19\u001b[1;33m \u001b[0my\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmap\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlabel_mapping\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     20\u001b[0m \u001b[0my\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'y' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "X Train:\n",
+      "     principal component 1  principal component 2\n",
+      "559              -1.299210               0.064637\n",
+      "966               0.792738              -1.633264\n",
+      "874               4.435945              -1.023632\n",
+      "6                 4.491263               1.674269\n",
+      "307               1.016308               0.118629\n",
+      "..                     ...                    ...\n",
+      "497              -0.421756               2.121061\n",
+      "830               2.820048              -1.223126\n",
+      "139              -0.312143              -3.046795\n",
+      "131               0.398070              -1.091916\n",
+      "536              -2.255133              -0.984662\n",
+      "\n",
+      "[805 rows x 2 columns]\n",
+      "\n",
+      "X Test:\n",
+      "     principal component 1  principal component 2\n",
+      "197              -3.005000              -1.212067\n",
+      "186               0.669455              -0.915653\n",
+      "393              -0.543672               0.332344\n",
+      "340              -0.461581               3.139182\n",
+      "991               0.427644              -0.418279\n",
+      "..                     ...                    ...\n",
+      "717              -1.820043               0.618622\n",
+      "372               1.356399              -1.059737\n",
+      "838              -2.054044               0.467192\n",
+      "519               0.053237               0.790728\n",
+      "350              -0.094224              -0.120414\n",
+      "\n",
+      "[202 rows x 2 columns]\n",
+      "\n",
+      "Y Train:\n",
+      "559        prefrail\n",
+      "966          robust\n",
+      "874          robust\n",
+      "6             frail\n",
+      "307    prefrail_mci\n",
+      "           ...     \n",
+      "497        prefrail\n",
+      "830          robust\n",
+      "139             mci\n",
+      "131             mci\n",
+      "536        prefrail\n",
+      "Name: condition, Length: 805, dtype: object\n",
+      "\n",
+      "Y Test:\n",
+      "197             mci\n",
+      "186             mci\n",
+      "393    prefrail_mci\n",
+      "340    prefrail_mci\n",
+      "991          robust\n",
+      "           ...     \n",
+      "717          robust\n",
+      "372    prefrail_mci\n",
+      "838          robust\n",
+      "519        prefrail\n",
+      "350    prefrail_mci\n",
+      "Name: condition, Length: 202, dtype: object\n",
+      "\n",
+      "Shape of X Train:\n",
+      "(805, 2)\n",
+      "\n",
+      "Shape of X Test:\n",
+      "(202, 2)\n",
+      "\n",
+      "Shape of Y Train:\n",
+      "(805,)\n",
+      "\n",
+      "Shape of Y Test:\n",
+      "(202,)\n"
      ]
     }
    ],
-   "source": [
-    "# Data Dictionary:\n",
-    "# frail -> 0\n",
-    "# frail_mci -> 1\n",
-    "# mci -> 2\n",
-    "# prefrail_mci -> 3\n",
-    "# prefrail -> 4\n",
-    "# robust -> 5\n",
-    "\n",
-    "# Conduct label mapping for conditions\n",
-    "label_mapping = {\n",
-    "    'frail' : 0,\n",
-    "    'frail_mci' : 1,\n",
-    "    'mci' : 2,\n",
-    "    'prefrail_mci' : 3,\n",
-    "    'prefrail' : 4,\n",
-    "    'robust' : 5\n",
-    "}\n",
-    "\n",
-    "y = y.map(label_mapping)\n",
-    "y = np.array(y)\n",
-    "\n",
-    "# Display label\n",
-    "print(y)\n",
-    "\n",
-    "# Display shape of label\n",
-    "print(y.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# Conduct train-test split on dataset\n",
     "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.2)\n",
@@ -299,11 +335,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
+   "id": "short-trust",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predictions: ['robust' 'robust' 'robust' 'prefrail_mci' 'robust' 'robust' 'robust'\n",
+      " 'robust' 'robust' 'robust' 'robust' 'robust' 'robust' 'robust' 'robust'\n",
+      " 'robust' 'robust' 'prefrail_mci' 'prefrail_mci' 'robust' 'robust'\n",
+      " 'robust' 'robust' 'prefrail_mci' 'robust' 'robust' 'prefrail_mci'\n",
+      " 'prefrail_mci' 'prefrail_mci' 'robust' 'robust' 'robust' 'robust'\n",
+      " 'robust' 'robust' 'robust' 'robust' 'robust' 'robust' 'robust' 'robust'\n",
+      " 'prefrail_mci' 'robust' 'robust' 'robust' 'robust' 'robust' 'robust'\n",
+      " 'robust' 'robust' 'robust' 'prefrail_mci' 'prefrail_mci' 'robust'\n",
+      " 'robust' 'robust' 'robust' 'robust' 'robust' 'robust' 'robust' 'robust'\n",
+      " 'prefrail_mci' 'robust' 'robust' 'robust' 'robust' 'robust' 'robust'\n",
+      " 'prefrail_mci' 'robust' 'robust' 'robust' 'robust' 'robust' 'robust'\n",
+      " 'robust' 'robust' 'robust' 'robust' 'prefrail_mci' 'robust' 'robust'\n",
+      " 'robust' 'robust' 'robust' 'robust' 'robust' 'robust' 'robust' 'robust'\n",
+      " 'prefrail_mci' 'prefrail_mci' 'robust' 'robust' 'robust' 'robust'\n",
+      " 'prefrail_mci' 'robust' 'robust' 'robust' 'robust' 'prefrail_mci'\n",
+      " 'prefrail_mci' 'robust' 'robust' 'robust' 'prefrail_mci' 'robust'\n",
+      " 'robust' 'prefrail_mci' 'robust' 'robust' 'robust' 'robust'\n",
+      " 'prefrail_mci' 'robust' 'robust' 'prefrail_mci' 'prefrail_mci' 'robust'\n",
+      " 'robust' 'robust' 'robust' 'prefrail_mci' 'robust' 'robust' 'robust'\n",
+      " 'robust' 'robust' 'robust' 'prefrail_mci' 'robust' 'robust'\n",
+      " 'prefrail_mci' 'robust' 'robust' 'robust' 'robust' 'robust'\n",
+      " 'prefrail_mci' 'robust' 'robust' 'robust' 'robust' 'robust' 'robust'\n",
+      " 'robust' 'robust' 'prefrail_mci' 'robust' 'robust' 'robust'\n",
+      " 'prefrail_mci' 'robust' 'robust' 'prefrail_mci' 'robust' 'robust'\n",
+      " 'robust' 'robust' 'prefrail_mci' 'robust' 'robust' 'robust' 'robust'\n",
+      " 'robust' 'robust' 'robust' 'robust' 'robust' 'robust' 'robust' 'robust'\n",
+      " 'robust' 'robust' 'robust' 'prefrail_mci' 'prefrail_mci' 'robust'\n",
+      " 'robust' 'robust' 'robust' 'prefrail_mci' 'robust' 'robust' 'robust'\n",
+      " 'robust' 'robust' 'robust' 'robust' 'robust' 'robust' 'robust' 'robust'\n",
+      " 'prefrail_mci' 'robust' 'robust' 'robust' 'robust' 'robust' 'robust']\n",
+      "Actual: 197             mci\n",
+      "186             mci\n",
+      "393    prefrail_mci\n",
+      "340    prefrail_mci\n",
+      "991          robust\n",
+      "           ...     \n",
+      "717          robust\n",
+      "372    prefrail_mci\n",
+      "838          robust\n",
+      "519        prefrail\n",
+      "350    prefrail_mci\n",
+      "Name: condition, Length: 202, dtype: object\n",
+      "Accuracy: 0.40594059405940597\n",
+      "[[ 0  0  0  0  0  2]\n",
+      " [ 0  0  0  0  6 10]\n",
+      " [ 0  0  0  0  3 19]\n",
+      " [ 0  0  0  0  7 29]\n",
+      " [ 0  0  0  0  9 34]\n",
+      " [ 0  0  0  0 10 73]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Create linear SVM model\n",
+    "# model = MultiOutputClassifier(svm.SVC(kernel='linear'))\n",
     "model = svm.SVC(kernel='linear')\n",
     "\n",
     "# Train the model\n",
@@ -318,97 +412,12 @@
     "# Print predictions, actual, and accuracy score\n",
     "print(\"Predictions:\", predictions)\n",
     "print(\"Actual:\", y_test)\n",
-    "print(\"Accuracy:\", acc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "print(\"Accuracy:\", acc)\n",
+    "\n",
     "# Show confusion matrix\n",
+    "# print(multilabel_confusion_matrix(y_test, predictions))\n",
     "print(confusion_matrix(y_test, predictions))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create RBF SVM model\n",
-    "model = svm.SVC(kernel='rbf')\n",
-    "\n",
-    "# Train the model\n",
-    "model.fit(x_train, y_train)\n",
-    "\n",
-    "# Make predictions\n",
-    "predictions = model.predict(x_test)\n",
-    "\n",
-    "# Measure accuracy\n",
-    "acc = accuracy_score(y_test, predictions)\n",
-    "\n",
-    "# Print predictions, actual, and accuracy score\n",
-    "print(\"Predictions:\", predictions)\n",
-    "print(\"Actual:\", y_test)\n",
-    "print(\"Accuracy:\", acc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create Sigmoid SVM model\n",
-    "model = svm.SVC(kernel='sigmoid')\n",
-    "\n",
-    "# Train the model\n",
-    "model.fit(x_train, y_train)\n",
-    "\n",
-    "# Make predictions\n",
-    "predictions = model.predict(x_test)\n",
-    "\n",
-    "# Measure accuracy\n",
-    "acc = accuracy_score(y_test, predictions)\n",
-    "\n",
-    "# Print predictions, actual, and accuracy score\n",
-    "print(\"Predictions:\", predictions)\n",
-    "print(\"Actual:\", y_test)\n",
-    "print(\"Accuracy:\", acc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create Polynomial SVM model\n",
-    "model = svm.SVC(kernel='poly')\n",
-    "\n",
-    "# Train the model\n",
-    "model.fit(x_train, y_train)\n",
-    "\n",
-    "# Make predictions\n",
-    "predictions = model.predict(x_test)\n",
-    "\n",
-    "# Measure accuracy\n",
-    "acc = accuracy_score(y_test, predictions)\n",
-    "\n",
-    "# Print predictions, actual, and accuracy score\n",
-    "print(\"Predictions:\", predictions)\n",
-    "print(\"Actual:\", y_test)\n",
-    "print(\"Accuracy:\", acc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -427,9 +436,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 5
 }
