--- a/work in progress/randomForestFeatureSelection.ipynb
+++ b/work in progress/randomForestFeatureSelection.ipynb
@@ -218,7 +218,11 @@
     "plt.barh(range(len(indices)), importances[indices], color='b', align='center')\n",
     "plt.yticks(range(len(indices)), [features[i] for i in indices])\n",
     "plt.xlabel('Relative Importance')\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "# Check if less than 50% for cummulative importance\n",
+    "\n",
+    "# Check Normality of data"
    ]
   },
   {
@@ -355,7 +359,9 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
